--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ nav ul{
 }
 nav ul li{
 	display: inline-block;
-	margin-right: 20px;
+	margin-right: 5px;
 }
 a{
 	
@@ -43,16 +43,16 @@ p{
 	}
 	
 .logo img{
-     height: 50px;
-     width: 50px;
+     height: 100px;
+     width: 80%;
 
 }
 
 .container{
-	max-width: 1300px;
-	margin: auto;
-	padding-left: 25px;
-	padding-right: 25px;
+	max-width: 1700px;
+	margin:auto ;
+	padding-left: 5px;
+	padding-right: 0px;
 }
 
 .row{
@@ -68,7 +68,7 @@ p{
 	min-width: 300px;
 }
 .col-2 img{
-	max-width: 100%;
+	max-width: 50%;
 	padding: 50px;
 }
 .col-2 h1{
